assets/scss/main.scss
@forward "reset.scss";
@forward "variables.scss";
@forward "root.scss";
@import "_animations.scss";
//@use "mixins.scss" as *;

//@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Space+Grotesk:wght@300..700&display=swap");
* {
    user-select: none;
    -webkit-user-select: none;
}
html {
    scroll-behavior: smooth;
}

body {
    margin: 0;
    font-family:
        Inter,
        Space Grotesk,
        sans-serif;
    background-color: var(--bg-color-900);
    min-height: 100vh;
    color: var(--text-color-1);
}

.content {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    height: fit-content;
    .about {
        grid-column: 1 / 2;
        grid-row: 1 / 3;
    }
}

.container {
    max-width: 1200px;
    margin-inline: auto;
    margin-top: 50px;
    padding: 1rem;
}

/* headings */
h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: 700;
    margin: 0;
    font-family:
        Space Grotesk,
        sans-serif;
    text-transform: uppercase;
}

@keyframes animatedGradient {
    from {
        background: linear-gradient(to right, var(--bg-color-800), var(--bg-color-900)) padding-box;
    }
    to {
        background: linear-gradient(to left, var(--bg-color-800), var(--bg-color-900)) padding-box;
    }
}

::-webkit-scrollbar {
    width: 6px;
}

::-webkit-scrollbar-thumb {
    background-color: var(--scrollbar-thumb-color);
    border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
    background-color: var(--scrollbar-thumb-hover-color);
}

::-webkit-scrollbar-track {
    background: var(--scrollbar-track-color);
    border-radius: 10px;
}

.sr-only {
    //display: none;
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border: 0;
}

